--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -11,16 +11,19 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:id="@+id/btn_startpg_calendar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="CALENDAR"/>
 
         <Button
+            android:id="@+id/btn_startpg_track"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="TRACK"/>
 
         <Button
+            android:id="@+id/btn_startpg_lists"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="LISTS"/>
