--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_vertical">
 
     <TextView
@@ -12,13 +13,12 @@
         android:layout_alignParentStart="true"
         android:text="Hello"
         android:textSize="20sp" />
-
     <Button
         android:id="@+id/task_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:text="Done" />
+        android:text="Done"
+        android:onClick="deleteTask"/>
 
 </RelativeLayout>
