--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -34,7 +34,8 @@
         android:id="@+id/imageView1"
         android:layout_width="300px"
         android:layout_height="300px"
-        android:src="@drawable/logo_tempus"/>
+        android:src="@drawable/logo_tempus"
+        android:layout_centerHorizontal="true"/>
 
 
     <ImageView
