--- a/app/src/main/res/layout/activity_calendar2.xml
+++ b/app/src/main/res/layout/activity_calendar2.xml
@@ -4,17 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nutricioapp.debkanya.tempus.CalendarActivity">
+    tools:context="com.nutricioapp.debkanya.tempus.Calendar">
 
     <CalendarView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
         android:id="@+id/calendarView"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
-
-
-
+        android:layout_width="381dp"
+        android:layout_height="304dp"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="0dp">
 
     </CalendarView>
 </android.support.constraint.ConstraintLayout>
