--- a/app/src/main/res/layout/activity_calendar2.xml
+++ b/app/src/main/res/layout/activity_calendar2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.nutricioapp.debkanya.tempus.Calendar">
+    tools:context="com.nutricioapp.debkanya.tempus.CalendarActivity">
 
     <CalendarView
         android:id="@+id/calendarView"
