--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -6,40 +6,73 @@
     android:layout_height="match_parent"
     tools:context="com.nutricioapp.debkanya.tempus.StartPage">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_startpg_calendar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="CALENDAR"/>
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/btn_startpg_track"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="9dp"
+            android:background="@android:color/darker_gray"
+            android:text="CALENDAR"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_startpg_track"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="TRACK"/>
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/btn_startpg_lists"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="9dp"
+            android:background="@android:color/darker_gray"
+            android:text="TRACK"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_startpg_lists"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="LISTS" />
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_above="@+id/btn_startpg_quit"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="7dp"
+            android:background="@android:color/darker_gray"
+            android:text="LISTS"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_startpg_quit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="22dp"
+            android:background="@android:color/darker_gray"
             android:text="QUIT"
-            android:onClick="ClickToExit"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/Welcome logo"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_above="@+id/btn_startpg_calendar"
+            android:layout_alignLeft="@+id/btn_startpg_calendar"
+            android:layout_alignStart="@+id/btn_startpg_calendar"
+            app:srcCompat="@drawable/tutorial" />
 
-
-
-
-    </LinearLayout>
-
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
