--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -2,10 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
     android:background="@color/colorPrimary">
 
     <TextView
@@ -32,10 +28,12 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="300px"
-        android:layout_height="300px"
-        android:src="@drawable/logo_tempus"
-        android:layout_centerHorizontal="true"/>
+        android:layout_width="500px"
+        android:layout_height="500px"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="37dp"
+        android:src="@drawable/logo_tempus" />
 
 
     <ImageView
